--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #f7f7f7;
+  background-color: #898484;
   display: flex;
   flex-direction: column;
   align-items: center;
